--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=Mali:wght@400;500&family=Raleway:wght@400;500&display=swap"
+			rel="stylesheet"
+		/>
 	</body>
 </html>
