--- a/src/app.html
+++ b/src/app.html
@@ -15,5 +15,8 @@
 			href="https://fonts.googleapis.com/css2?family=Mali:wght@400;500&family=Raleway:wght@400;500&display=swap"
 			rel="stylesheet"
 		/>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+			rel="stylesheet" 
+		/>
 	</body>
 </html>
