--- a/src/app.html
+++ b/src/app.html
@@ -12,11 +12,8 @@
 		<div id="svelte">%svelte.body%</div>
 
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mali:wght@400;500&family=Raleway:wght@400;500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500&family=Raleway:wght@400;500&display=swap"
 			rel="stylesheet"
-		/>
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-			rel="stylesheet" 
 		/>
 	</body>
 </html>
