--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		<div id="svelte">%svelte.body%</div>
 
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mali:wght@400;500&family=Raleway:wght@400;500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500&family=Raleway:wght@400;500&display=swap"
 			rel="stylesheet"
 		/>
 	</body>
